[package]
# name = "file-rotate"
name = "rolling-file"
version = "0.2.0"
authors = [
    "Kevin Hoffman <KevinJohnHoffman@gmail.com>",
    "Henrique Spadim <henrique@spadim.com.br",
]
edition = "2021"

description = "A rolling file appender with customizable rolling conditions."
homepage = "https://github.com/Axcient/rolling-file-rs"
documentation = "https://docs.rs/rolling-file/"
repository = "https://github.com/Axcient/rolling-file-rs"
keywords = ["rolling", "file", "tracing"]
categories = ["debugging"]
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0.5"
